--- a/Work.ipynb
+++ b/Work.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 63
+     "execution_count": 3
     }
    ],
    "source": [
@@ -927,7 +927,47 @@
     "lista = [A,B,C]\n",
     "\n",
     "S30 = Stat()\n",
-    "S30.AV(mode = \"multiMedia\", multiDados = lista, multiTamanhos = False)"
+    "S30.AV(mode = \"multiMedia\", multiDados = lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "T_calc_emparelhado =  -0.287\nTcritmin =  -2.262\nTcritmax =  2.262\nAceito H0, as médias são iguais\nLembre que deve ser respeitada a ordem de que o dado A é maior que o B. A troca de sinal irá distorcer o resultado\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "source": [
+    "A = [8.5,4.0,5.0,6.5,7.0,3.5,9.0,8.0,7.5,5.0]\n",
+    "B = [8.0,4.5,6.0,6.0,7.0,4.0,8.5,8.5,7.0,5.0]\n",
+    "S31 = Stat(A,B)\n",
+    "S31.TH(mode = 'diffMedEmp', student=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1,2,3,4,5,6,7\n",
+    "0.2,0.6,1.2,1.9,2.6,3.2,4.0\n"
    ]
   }
  ]
